--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
 }
 
 #paddle {
-    background-color: black;
+    background-color: aquamarine;
     position: absolute;
     height: 20px;
     width: 80px;
@@ -67,7 +67,7 @@ body {
   #ball {
     height: 10px;
     width: 10px;
-    background-color: purple;
+    background-color: white;
     position: absolute;
     left: 40px;
 }
