--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 #game-board {
     background-color: black;
     padding: 40px 0;
-    margin: 50px
+    margin: 0 50px
 }
 
 #nav {
@@ -62,12 +62,14 @@ body {
     width: 80px;
     bottom: 0px;
     right: 180px;
-  }
+}
 
-  #ball {
+.ball {
     height: 10px;
     width: 10px;
     background-color: white;
-    position: absolute;
-    left: 40px;
+}
+
+.right {
+    float: right;
 }
